# framework-tecnologias-4-0-ciencia-datos-gestion-hidrica

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: run-pipeline.yml
data/processed/: Calidad_Agua_Rio_Bogota_Top10_Mensual.xlsx  Dataset_Maestro_Multiestacion_LSTM_V1.xlsx  Dataset_V5_Final_Normalizado.xlsx  Proxy_Climatico_ONI_Mensual.xlsx  Serie_Tiempo_Niveles_Rio_Filtrado_V3.xlsx
notebooks/: dataProyectoV6.ipynb  dataProyectoV6_export.py
scripts/: build_model_dataset.py  download_raw_data.py  run_pipeline.py
src/proyecto_grado_v6/: __init__.py  cli.py  climate.py  config.py  hydrology.py  integration.py  io.py  macro_context.py  model_dataset.py  pipeline.py  raw_data.py  transforms.py  water_quality.py
tests/: test_transforms.py
